# fastapi_crud

./: .gitignore  pyproject.toml
api/: main.py
